# saru-rusts

./: .gitignore
rushjob-wio/: .gitignore
rushjob-wio/CFDPractise/CFDPython/simulation/draw-cavityflow2d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/draw-cavityflow2d/examples/: draw-cavityflow2d.rs
rushjob-wio/CFDPractise/CFDPython/simulation/draw-cavityflow3d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/draw-cavityflow3d/examples/: draw-cavityflow3d.rs
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_quiver2d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_quiver2d/src/: lib.rs
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_quiver3d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_quiver3d/src/: lib.rs
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_vortex_lbm/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_vortex_lbm/src/: lib.rs
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_vortex_lbm_arrow/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/graph_supply_vortex_lbm_arrow/src/: lib.rs
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-cavityflow2d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-cavityflow2d/examples/: sdl2-draw-cavityflow2d.rs
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm/examples/: sdl2-draw-vortex_lbm.rs
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm2dmix_par/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm2dmix_par/examples/: sdl2-draw-vortex_lbm2dmix_par.rs
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm3d/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm3d/examples/: sdl2-draw-vortex_lbm3d.rs
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm_arrow/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/simulation/sdl2-draw-vortex_lbm_arrow/examples/: sdl2-draw-vortex_lbm_arrow.rs
rushjob-wio/CFDPractise/CFDPython/vortex_lbm2dmix_par/: Cargo.toml
rushjob-wio/CFDPractise/CFDPython/vortex_lbm2dmix_par/src/: lib.rs
rushjob-wio/Kalman-Bayes/discrete_bayes_filter/draw-dogfilter/: Cargo.toml
rushjob-wio/Kalman-Bayes/discrete_bayes_filter/draw-dogfilter/examples/: draw-dogfilter.rs
rushjob-wio/Kalman-Bayes/discrete_bayes_filter/draw-robotfilter/: Cargo.toml
rushjob-wio/Kalman-Bayes/discrete_bayes_filter/draw-robotfilter/examples/: draw-robotfilter.rs
rushjob-wio/Kalman-Bayes/multi_variate_filter/debug_mvkalmanfilter/: Cargo.toml
rushjob-wio/Kalman-Bayes/multi_variate_filter/debug_mvkalmanfilter/examples/: debug_mvkalmanfilter.rs  debug_svd.rs
rushjob-wio/Kalman-Bayes/one_dimensional_filter/debug_odkalmanfilter/: Cargo.toml
rushjob-wio/Kalman-Bayes/one_dimensional_filter/debug_odkalmanfilter/examples/: debug_odkalmanfilter.rs
rushjob-wio/Kalman-Bayes/one_dimensional_filter/draw-dogsim/: Cargo.toml
rushjob-wio/Kalman-Bayes/one_dimensional_filter/draw-dogsim/examples/: draw-dogsim-bignoize_wronginit.rs  draw-dogsim-bignoize_zinit.rs  draw-dogsim-bigsensornoize.rs  draw-dogsim-nonliner.rs  draw-dogsim-rest.rs  draw-dogsim-smallprocessnoize.rs  draw-dogsim-var.rs  draw-dogsim-wronginit.rs  draw-dogsim.rs  draw-voltsim-var.rs  draw-voltsim.rs
rushjob-wio/Kalman-Bayes/one_dimensional_filter/nonlinersimulation/: Cargo.toml
rushjob-wio/Kalman-Bayes/one_dimensional_filter/nonlinersimulation/src/: lib.rs
rushjob-wio/Kalman-Bayes/particle_filters/debug_particlefilters/: Cargo.toml
rushjob-wio/Kalman-Bayes/particle_filters/debug_particlefilters/examples/: debug_filter.rs  debug_particle.rs
rushjob-wio/Kalman-Bayes/unscented_filter/debug_uskalmanfilter/: Cargo.toml
rushjob-wio/Kalman-Bayes/unscented_filter/debug_uskalmanfilter/examples/: debug-self-positioning.rs  debug-sensor-multiple.rs  debug_atan2.rs  debug_radaraccsim.rs  debug_sigma.rs  debug_uskalmanfilter.rs
rushjob-wio/Zitterbewegung/simulation/graph_supply_qm/: Cargo.toml
rushjob-wio/Zitterbewegung/simulation/graph_supply_qm/src/: lib.rs
rushjob-wio/Zitterbewegung/simulation/graph_supply_qma/: Cargo.toml
rushjob-wio/Zitterbewegung/simulation/graph_supply_qma/src/: lib.rs
rushjob-wio/emb_arrowgraph/: Cargo.toml
rushjob-wio/emb_arrowgraph/src/: lib.rs
rushjob-wio/emb_bargraph/: Cargo.toml
rushjob-wio/emb_covargraph/: Cargo.toml
rushjob-wio/emb_covargraph/src/: lib.rs
rushjob-wio/emb_gaussgraph/: Cargo.toml
rushjob-wio/emb_linegraph/: Cargo.toml
rushjob-wio/emb_linetrim/: Cargo.toml
rushjob-wio/emb_shapegraph/: Cargo.toml
rushjob-wio/emb_textterm/: Cargo.toml
rushjob-wio/linspacef32/: Cargo.toml
rushjob-wio/wio-clock-toast/: Cargo.toml
rushjob-wio/wio-clock-toast/examples/: wio-clock-toast.rs  wio-clock-tosst.rs
rushjob-wio/wio-draw-bargraph/: Cargo.toml
rushjob-wio/wio-draw-cfdnssor/: Cargo.toml
rushjob-wio/wio-draw-cfdnssor/examples/: wio-draw-cfdnssor.rs
rushjob-wio/wio-draw-clock-buttons/: Cargo.toml
rushjob-wio/wio-draw-clock-fft/: Cargo.toml
rushjob-wio/wio-draw-covargraph/: Cargo.toml
rushjob-wio/wio-draw-elldiski/: Cargo.toml
rushjob-wio/wio-draw-gaussgraph/: Cargo.toml
rushjob-wio/wio-draw-reactdiff/: Cargo.toml
rushjob-wio/wio-draw-reactdiff/examples/: wio-draw-reactdiff.rs
rushjob-wio/wio-draw-sbelldiski/: Cargo.toml
rushjob-wio/wio-draw-sbelldiski/examples/: wio-draw-sbelldiski.rs
rushjob-wio/wio-draw-shapegraph/: Cargo.toml
rushjob-wio/wio-draw-textterm/: Cargo.toml
rushjob-wio/wio-mic-pitch/: Cargo.toml
rushjob-wio/wio-mic-pitch/examples/: wio-mic-pitch.rs
rushjob-wio/wio_biquad/: Cargo.toml
rushjob-wio/wio_buttons/: Cargo.toml
rushjob-wio/wio_cfdnssor/: Cargo.toml
rushjob-wio/wio_clock_silent/: Cargo.toml
rushjob-wio/wio_elldiski/: Cargo.toml
rushjob-wio/wio_fft/: Cargo.toml
rushjob-wio/wio_fftbutton/: Cargo.toml
rushjob-wio/wio_term/: Cargo.toml
rushjob-wio/wio_term/src/: lib.rs
(+342 files in other folders)
