[package]
authors = ["saruyoshida"]
name = "emb_covargraph"
version = "0.1.0"
edition = "2021"

[dependencies]
micromath = "2.0.0"
embedded-graphics = "0.7.1"
emb_bargraph = {"path" = "../emb_bargraph"}
emb_linegraph = {"path" = "../emb_linegraph"}
emb_shapegraph = {"path" = "../emb_shapegraph"}
heapless = "0.7.16"
nalgebra = { version = "0.32.3", default-features = false, features  =   [  "libm" ]}

