[package]
name = "wio-cfdnssor-draw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.4"
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", optional = true }
embedded-graphics = "0.7.1"
panic-halt = "0.2"
wio_cfdnssor = {"path" = "../wio_cfdnssor"}

[[example]]
name = "wio-draw-cfdnssor"


