[package]
name = "wio-sbelldiski-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
wio_terminal = "0.4"
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", optional = true }
embedded-graphics = "0.7.1"
panic-halt = "0.2"
heapless = "0.5"
wio_sbcamera = {"path" = "../wio_sbcamera"}
wio_elldiski= {"path" = "../wio_elldiski"}
wio_sbbutton= {"path" = "../wio_sbbutton"}
wio_polywave= {"path" = "../wio_polywave"}
wio_polylinetrim = {"path" = "../wio_polylinetrim"}

[dependencies.atsamd-hal]
version = "0.13"
default-features = false

[features]
default = ["atsamd-hal/samd51p", "rt"]
rt = ["atsamd-hal/samd51p-rt", "cortex-m-rt"]

[[example]]
name = "wio-draw-sbelldiski"


