[package]
name = "wio_term"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = "0.4"
panic-halt = "0.2"
embedded-graphics = "0.7.1"
cortex-m = "0.7.3"
display-interface-spi = "0.4"
ili9341 = "0.5.0"
lis3dh = "0.3.0"
embedded-sdmmc = "0.3.0"
