[package]
authors = ["saruyoshida"]
name = "vortex_lbm2dmix_par"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
ndarray = {version = "0.16.1",default-features = false,features = ["rayon"]}
ndarray_aulait = {"path" = "../../ndarray_aulait"}
itertools = { version = "0.14.0", default-features = false}










