[package]
name = "robotfilter-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
wio_terminal = "0.4"
cortex-m = "0.6"
cortex-m-rt = { version = "0.6", optional = true }
panic-halt = "0.2"
heapless = "0.7.16"
emb_bargraph = {"path" = "../../../emb_bargraph"}
emb_textterm = {"path" = "../../../emb_textterm"}
robot_filter = {"path" = "../robot_filter"}

[[example]]
name = "draw-robotfilter"


