[package]
name = "odkalmanfilter-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
micromath = "2.0.0"
emb_textterm = {"path" = "../../../emb_textterm"}
one_dimensional = {"path" = "../one_dimensional"}
od_kalmanfilter = {"path" = "../od_kalmanfilter"}
dogsimulation = {"path" = "../dogsimulation"}

[[example]]
name = "debug_odkalmanfilter"



