[package]
authors = ["saruyoshida"]
name = "graph_supply_quiver2d"
version = "0.1.0"
edition = "2021"

[dependencies]
emb_bargraph = {"path" = "../../../../emb_bargraph"}
emb_arrowgraph = {"path" = "../../../../emb_arrowgraph"}
num-traits = { version = "0.2", default-features = false, features = ["libm"] }






