[package]
authors = ["saruyoshida"]
name = "graph_supply_vortex_lbm_arrow"
version = "0.1.0"
edition = "2021"

[dependencies]
emb_bargraph = {"path" = "../../../../emb_bargraph"}
emb_shapegraph = {"path" = "../../../../emb_shapegraph"}
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

emb_arrowgraph = {"path" = "../../../../emb_arrowgraph"}
wio_sbeye = {"path" = "../../../../wio_sbeye"}
wio_sbcamera_ortho = {"path" = "../../../../wio_sbcamera_ortho"}





