[package]
name = "sdl2-draw-vortex_lbm3d"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = "0.3.0"
graph_supply_vortex_lbm3d = {"path" = "../graph_supply_vortex_lbm3d"}
vortex_lbm3d = {"path" = "../../vortex_lbm3d"}
itertools = { version = "0.14.0", default-features = false}
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
linspacef32 = {"path" = "../../../../linspacef32"}
auto_enums = "0.8"
auto-allocator = "*"

[[example]]
name = "sdl2-draw-vortex_lbm3d"























